src/post.pegjs
{
  function orJSON( text ) {
    try {
      return JSON.parse( text );
    } catch (e) {
      return text;
    }
  }

  function orAsJSON( source ) {
    return Object.keys( source ).reduce( function( o, key ) {
      return Object.assign( o, { [ key ]: orJSON( source[ key ] ) } );
    }, {} );
  }
}

Document
  = Token*
  
Token
  = WP_Block_Balanced
  / WP_Block_Start
  / WP_Block_End
  / HTML_Comment
  / HTML_Tag_Balanced
  / HTML_Tag_Open
  / HTML_Tag_Close
  / ts:HTML_Text+ 
  { return {
    type: 'Text',
    value: ts.join('') 
  } }
  
HTML_Text
  = [^<]

WP_Block_Balanced
  = s:WP_Block_Start ts:(!WP_Block_End t:Token { return t })+ e:WP_Block_End
  { return {
    type: 'WP_Block',
    blockType: s.blockType,
    attrs: orAsJSON( s.attrs ),
    startText: s.text,
    endText: e.text,
    rawContent: text(),
    children: ts
  } }
  
WP_Block_Start
  = "<!--" __ "wp:" blockType:WP_Block_Type attrs:HTML_Attribute_List _? "-->"
  { return {
    type: 'WP_Block_Start',
    blockType,
    attrs,
    text: text()
  } }
  
WP_Block_End
  = "<!--" __ "/wp" __ "-->"
  { return {
    type: 'WP_Block_End',
    text: text()
  } }

WP_Block_Type
  = head:ASCII_Letter tail:(ASCII_AlphaNumeric / "/")*
  { return [ head ].concat( tail ).join('')  }
 
HTML_Comment
  = "<!--" cs:(!"-->" c:. { return c })* "-->"
  { return {
    type: "HTML_Comment",
    innerText: cs.join(''),
    text: text()
  } }
  
HTML_Tag_Balanced
  = s:HTML_Tag_Open
    ts:(
      HTML_Tag_Balanced
    / (!(ct:HTML_Tag_Close & { return s.name === ct.name } ) t:Token { return t }))*
    e:HTML_Tag_Close
  & { return s.name === e.name }
  { return {
    type: 'HTML_Tag',
    name: s.name,
    attrs: s.attrs,
    startText: s.text,
    endText: e.text,
    children: ts
  } }
  
HTML_Tag_Open
  = "<" name:HTML_Tag_Name attrs:HTML_Attribute_List _* ">"
  { return {
    type: 'HTML_Tag_Open',
    name,
    attrs,
    text: text()
  } }

HTML_Tag_Close
  = "</" name:HTML_Tag_Name _* ">"
  { return {
    type: 'HTML_Tag_Close',
    name,
    text: text()
  } }
  
HTML_Tag_Name
  = cs:HTML_Tag_Name_Character+
  { return cs.join('') }
  
HTML_Tag_Name_Character
  = ASCII_Letter
  / ASCII_Digit
  
HTML_Attribute_List
  = as:(_+ a:HTML_Attribute_Item { return a })*
  { return as.reduce( ( attrs, [ name, value ] ) => Object.assign(
    attrs,
    { [ name ]: value }
  ), {} ) }
  
HTML_Attribute_Item
  = HTML_Attribute_Quoted
  / HTML_Attribute_Unquoted
  / HTML_Attribute_Empty
  
HTML_Attribute_Empty
  = name:HTML_Attribute_Name
  { return [ name, true ] }
  
HTML_Attribute_Unquoted
  = name:HTML_Attribute_Name _* "=" _* value:[a-zA-Z0-9]+
  { return [ name, value.join('') ] }
  
HTML_Attribute_Quoted
  = name:HTML_Attribute_Name _* "=" _* '"' value:(!'"' c:. { return c })* '"'
  { return [ name, value.join('') ] }
  / name:HTML_Attribute_Name _* "=" _* "'" value:(!"'" c:. { return c })* "'"
  { return [ name, value.join('') ] }
  
HTML_Attribute_Name
  = cs:[a-zA-Z0-9:.]+
  { return cs.join('') }

ASCII_AlphaNumeric
  = ASCII_Letter 
  / ASCII_Digit

ASCII_Letter
  = [a-zA-Z]
  
ASCII_Digit
  = [0-9]

Newline
  = [\r\n]
  
_
  = [ \t]
  
__
  = _+
